--- a/index.html
+++ b/index.html
@@ -3,152 +3,30 @@
 
 <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/jquery.dataTables.css" media="screen" />
-    <title>Documento</title>
+    <title>Demo DataTables AJAX</title>
 </head>
 
 <body>
-    <table id="Jtabla" cellpadding="0" cellspacing="0" border="0" class="display">
+    <table id="Jtabla">
 
         <thead>
             <tr>
-
-                <th width="58" align="left">Codigo</th>
-                <th width="274" align="left">Cliente</th>
-
-                <th width="124" align="left">Nota Pedido</th>
-                <th width="119" align="left">Estado Pedido</th>
-
-                <th width="103" align="left">Importe</th>
+                <th>Name</th>
+                <th>Position</th>
+                <th>Office</th>
+                <th>Extn.</th>
+                <th>Start date</th>
+                <th>Salary</th>
             </tr>
 
         </thead>
-        <tbody>
-
-            <tr>
-                <td>1001</td>
-
-                <td>Carlos Alcantara </td>
-                <td>1203</td>
-
-                <td>Enviado</td>
-                <td class="center">1000</td>
-
-            </tr>
-            <tr class="gradeC">
-
-                <td>1002</td>
-                <td>Jose Albertez </td>
-
-                <td>1204</td>
-                <td>Pendiente</td>
-
-                <td class="center">500</td>
-            </tr>
-
-            <tr class="gradeA">
-                <td>1003</td>
-
-                <td>Carriles SL </td>
-                <td>1345</td>
-
-                <td>En Proceso </td>
-                <td class="center">2500</td>
-
-            </tr>
-            <tr class="gradeA">
-
-                <td>1004</td>
-                <td>Maria Pado </td>
-
-                <td>1320</td>
-                <td>Enviado</td>
-
-                <td class="center">350</td>
-            </tr>
-
-            <tr class="gradeA">
-                <td>1018</td>
-
-                <td>Alina Sereno </td>
-                <td>1358</td>
-
-                <td>Enviado</td>
-                <td class="center">50</td>
-
-            </tr>
-            <tr>
-                <td>1001</td>
-
-                <td>Carlos Alcantara </td>
-                <td>1203</td>
-
-                <td>Enviado</td>
-                <td class="center">1000</td>
-
-            </tr>
-            <tr>
-                <td>1001</td>
-
-                <td>Carlos Alcantara </td>
-                <td>1203</td>
-
-                <td>Enviado</td>
-                <td class="center">1000</td>
-
-            </tr>
-
-            <tr>
-                <td>1001</td>
-
-                <td>Carlos Alcantara </td>
-                <td>1203</td>
-
-                <td>Enviado</td>
-                <td class="center">1000</td>
-
-            </tr>
-
-            <tr>
-                <td>1001</td>
-
-                <td>Carlos Alcantara </td>
-                <td>1203</td>
-
-                <td>Enviado</td>
-                <td class="center">1000</td>
-
-            </tr>
-
-            <tr>
-                <td>1001</td>
-
-                <td>Carlos Alcantara </td>
-                <td>1203</td>
-
-                <td>Enviado</td>
-                <td class="center">1000</td>
-
-            </tr>
-
-            <tr>
-                <td>1001</td>
-
-                <td>Carlos Alcantara </td>
-                <td>1203</td>
-
-                <td>Enviado</td>
-                <td class="center">1000</td>
-
-            </tr>
 
     </table>
-
-
     <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="js/jquery.dataTables.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
-
 </body>
 
 </html>
