Se agrega el archivo response.json

--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
 
         <thead>
             <tr>
-                <th>Name</th>
-                <th>Position</th>
-                <th>Office</th>
-                <th>Extn.</th>
-                <th>Start date</th>
-                <th>Salary</th>
+                <th>id origen</th>
+                <th>origen</th>
+                <th>id producteca</th>
+                <th>id sap</th>
+                <th>fecha obtencion</th>
+                <th>nombre</th>
+                <th>nick name</th>
+                <th>numero dni</th>
+                <th>materiales</th>
+                <th>precio total</th>
+                <th>etiqueta</th>
             </tr>
 
         </thead>
