--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/jquery.dataTables.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="css/select.dataTables.min.css" media="screen" />
     <title>Demo DataTables AJAX</title>
 </head>
 
@@ -31,6 +32,7 @@
     </table>
     <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="js/jquery.dataTables.js"></script>
+    <script type="text/javascript" src="js/dataTables.select.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 
