--- a/index.html
+++ b/index.html
@@ -6,30 +6,35 @@
     <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/jquery.dataTables.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="css/select.dataTables.min.css" media="screen" />
-    <title>Demo DataTables AJAX</title>
+    <title>DataTables AJAX DEMO</title>
 </head>
 
 <body>
-    <table id="Jtabla" class="display">
+    <div>
+        <h1>DataTables DEMO</h1>
+    </div>
+    <div>
+        <table id="Jtabla" class="display">
 
-        <thead>
-            <tr>
-                <th>id origen</th>
-                <th>origen</th>
-                <th>id producteca</th>
-                <th>id sap</th>
-                <th>fecha obtencion</th>
-                <th>nombre</th>
-                <th>nick name</th>
-                <th>numero dni</th>
-                <th>materiales</th>
-                <th>precio total</th>
-                <th>etiqueta</th>
-            </tr>
+            <thead>
+                <tr>
+                    <th>id origen</th>
+                    <th>origen</th>
+                    <th>id producteca</th>
+                    <th>id sap</th>
+                    <th>fecha obtencion</th>
+                    <th>nombre</th>
+                    <th>nick name</th>
+                    <th>numero dni</th>
+                    <th>materiales</th>
+                    <th>precio total</th>
+                    <th>etiqueta</th>
+                </tr>
 
-        </thead>
+            </thead>
 
-    </table>
+        </table>
+    </div>
     <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="js/jquery.dataTables.js"></script>
     <script type="text/javascript" src="js/dataTables.select.min.js"></script>
