--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/jquery.dataTables.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="css/select.dataTables.min.css" media="screen" />
-    <title>DataTables AJAX DEMO</title>
+    <link rel="stylesheet" type="text/css" href="css/buttons.dataTables.min.css" media="screen" />
+    <title>DataTables demostration</title>
 </head>
 
 <body>
     <div>
-        <h1>DataTables DEMO</h1>
+        <h1>DataTables Demostration</h1>
     </div>
     <div>
         <table id="Jtabla" class="display">
@@ -38,6 +39,12 @@
     <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="js/jquery.dataTables.js"></script>
     <script type="text/javascript" src="js/dataTables.select.min.js"></script>
+    <script type="text/javascript" src="js/dataTables.buttons.min.js"></script>
+    <script type="text/javascript" src="js/jszip.min.js"></script>
+    <script type="text/javascript" src="js/pdfmake.min.js"></script>
+    <script type="text/javascript" src="js/vfs_fonts.js"></script>
+    <script type="text/javascript" src="js/buttons.html5.min.js"></script>
+    <script type="text/javascript" src="js/buttons.print.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 
